--- a/cryptocurrency/website/requirements.txt
+++ b/cryptocurrency/website/requirements.txt
@@ -9,7 +9,7 @@ cssselect==1.2.0
 cssutils==2.7.1
 distlib==0.3.6
 dj-database-url==2.1.0
-Django==4.2.4
+Django==3.2
 django-countries==7.5.1
 django-filter==23.3
 django-storages==1.13.2
@@ -26,6 +26,7 @@ psycopg2-binary==2.9.7
 pypng==0.20220715.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
+pytz==2023.3.post1
 qrcode==7.4.2
 requests==2.31.0
 s3transfer==0.6.2
